testsuite/tests/linear/should_fail/all.T
test('TypeClass', normal, compile_fail, [''])
test('Linear11', normal, compile_fail, [''])
test('Linear13', normal, compile_fail, [''])
test('Linear17', normal, compile_fail, [''])
test('Linear1', normal, compile_fail, [''])
test('Linear2', normal, compile_fail, [''])
test('Linear5', normal, compile_fail, [''])
test('Linear7', normal, compile_fail, [''])
test('Linear9', normal, compile_fail, [''])
test('LinearNoExt', normal, compile_fail, [''])
test('LinearAsPat', normal, compile_fail, [''])
test('LinearLet', normal, compile_fail, [''])
test('LinearLazyPat', normal, compile_fail, [''])
test('LinearRecordUpdate', normal, compile_fail, [''])
test('LinearSeq', normal, compile_fail, [''])
test('LinearViewPattern', normal, compile_fail, [''])
test('LinearConfusedDollar', normal, compile_fail, [''])
test('LinearPatSyn', normal, compile_fail, [''])
